--- a/src/main/resources/fxmls/RegisterProduct.fxml
+++ b/src/main/resources/fxmls/RegisterProduct.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
@@ -19,7 +21,7 @@
          <children>
             <Pane fx:id="productInfoPane">
                <children>
-                  <TextField fx:id="productNameInput" layoutY="60.0" prefHeight="25.0" prefWidth="240.0" promptText="Digite o nome do produto" />
+                  <TextField fx:id="productNameInput" layoutY="60.0" onKeyPressed="#updateProductName" prefHeight="25.0" prefWidth="240.0" promptText="Digite o nome do produto" />
                   <Label prefHeight="30.0" prefWidth="240.0" text="Informações do produto">
                      <font>
                         <Font name="System Bold" size="17.0" />
@@ -40,43 +42,34 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="productBrandInput" layoutX="261.0" layoutY="60.0" prefHeight="25.0" prefWidth="240.0" promptText="Digite a marca do produto" />
+                  <TextField fx:id="productBrandInput" layoutX="261.0" layoutY="60.0" onKeyPressed="#updateProductBrand" prefHeight="25.0" prefWidth="240.0" promptText="Digite a marca do produto" />
                   <ComboBox fx:id="productCategorySelect" layoutY="131.0" prefWidth="240.0" promptText="Selecione a categoria" />
-               </children>
-            </Pane>
-            <Pane fx:id="skuPane" layoutY="234.0" prefHeight="108.0" prefWidth="720.0">
-               <children>
-                  <Label prefHeight="30.0" prefWidth="160.0" text="Cor">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="180.0" prefHeight="30.0" prefWidth="160.0" text="Tamanho">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="360.0" prefHeight="30.0" prefWidth="160.0" text="Valor">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="skuPriceInput" layoutX="360.0" layoutY="32.0" prefHeight="25.0" prefWidth="160.0" promptText="Digite o valor (R$)" />
-                  <ComboBox fx:id="skuColorSelect" layoutY="32.0" prefWidth="160.0" promptText="Selecione a cor" />
-                  <ComboBox fx:id="skuSizeSelect" layoutX="180.0" layoutY="32.0" prefWidth="160.0" promptText="Selecione o tamanho" />
-                  <Label layoutX="560.0" prefHeight="30.0" prefWidth="160.0" text="Quantidade">
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="skuAmountInput" layoutX="560.0" layoutY="31.0" prefHeight="25.0" prefWidth="160.0" promptText="Digite a quantidade" />
-                  <Button fx:id="newSkuButton" layoutY="82.0" mnemonicParsing="false" text="Novo SKU" />
                </children>
             </Pane>
          </children>
       </Pane>
-      <Button layoutX="14.0" layoutY="561.0" mnemonicParsing="false" prefWidth="92.0" text="Limpar" />
+      <Button fx:id="cleanFieldsButton" layoutX="14.0" layoutY="561.0" mnemonicParsing="false" onAction="#cleanAllFields" prefWidth="92.0" text="Limpar" />
       <Button fx:id="registerProductButton" layoutX="125.0" layoutY="561.0" mnemonicParsing="false" onAction="#registerProduct" prefWidth="92.0" text="Salvar" />
       <Label fx:id="registerProductFeedbackLabel" layoutX="255.0" layoutY="559.0" prefHeight="30.0" prefWidth="515.0" textAlignment="RIGHT" />
+      <Button fx:id="newSkuButton" layoutX="15.0" layoutY="249.0" mnemonicParsing="false" onAction="#openRegisterSKUWindow" text="Novo SKU" />
+      <Pane fx:id="productInfoPane1" layoutX="15.0" layoutY="300.0" prefHeight="246.0" prefWidth="768.0">
+         <children>
+            <Label prefHeight="30.0" prefWidth="240.0" text="Lista de SKUs">
+               <font>
+                  <Font name="System Bold" size="17.0" />
+               </font>
+            </Label>
+            <TableView fx:id="skuList" layoutY="46.0" prefHeight="200.0" prefWidth="768.0">
+              <columns>
+                <TableColumn fx:id="skuTableCodeColumn" prefWidth="121.0" text="Código" />
+                <TableColumn fx:id="skuTableColorColumn" prefWidth="131.0" text="Cor" />
+                  <TableColumn fx:id="skuTableSizeColumn" prefWidth="115.0" text="Tamanho" />
+                  <TableColumn fx:id="skuTablePriceColumn" prefWidth="138.0" text="Preço" />
+                  <TableColumn fx:id="skuTableAmountColumn" prefWidth="123.0" text="Quantidade" />
+                  <TableColumn fx:id="skuTableEditionColumn" prefWidth="139.0" text="Editar" />
+              </columns>
+            </TableView>
+         </children>
+      </Pane>
    </children>
 </AnchorPane>
